--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.3.1
 confusable-homoglyphs==3.2.0
-Django==1.11.29
+Django==3.1.4
 django-bootstrap3==14.2.0
 django-registration==2.4.1
 django-tinymce==3.2.0
+django-utils-six==2.0
 importlib-metadata==1.7.0
 Pillow==8.1.0
 psycopg2-binary==2.8.6
